# ArkTs-Addons

./: build-profile.json5
entry/: oh-package-lock.json5
entry/src/main/cpp/: CMakeLists.txt  hello.cpp
entry/src/main/cpp/types/libentry/: index.d.ts  oh-package.json5
entry/src/main/ets/pages/: Index.ets
napiTest/: oh-package-lock.json5  oh-package.json5
napiTest/src/main/: module.json5
napiTest/src/main/cpp/: CMakeLists.txt  hello.cpp
napiTest/src/main/cpp/types/libnapitest/: index.d.ts  oh-package.json5
napiTest/src/main/ets/napitestability/: NapiTestAbility.ets
napiTest/src/main/ets/pages/: Index.ets
napiTest/src/main/resources/en_US/element/: string.json
napiTest/src/main/resources/zh_CN/element/: string.json
